<resources>
    <string name="app_name">GitHubUser</string>
    <string name="SplashScreenName">GitHub User</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter a username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_detail_name">User Detail Name</string>
    <string name="user_detail_username">User Detail Username</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="followers_fragment">Followers Fragment</string>
    <string name="following_fragment">Following Fragment</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove_from_favorite">Remove from Favorite</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode </string>
    <string name="image_description">User Profile Image</string>
</resources>