<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_detail_avatar"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/image_description"
            tools:src="@tools:sample/avatars"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_detail_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="140dp"
            android:id="@+id/tv_user_detail_name"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_detail_username"
            android:textSize="15dp"
            android:textStyle="italic"
            android:layout_marginTop="175dp"
            android:id="@+id/tv_user_detail_username"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follower"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="210dp"
            android:id="@+id/tv_user_detail_follower"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="210dp"
            android:id="@+id/tv_user_detail_following"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_add_favorite"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:text="@string/add_to_favorite"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="255dp"/>

    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        app:tabTextColor="@android:color/white"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>